Fixed TestResults and RequirementLevels in Clientscanner and Serverscanner profiles